Version 0.6.0~dev

	* Reduce CPU usage when watching a lot of processes, closes: #4271.
	* Reduce shutdown time, closes: #4270.

Version 0.5.0 Released on 2011/05/05

	* Use a pipe to send SIGCHILD events to a newly-created main loop.
	* Drop all KeyError exception handling.
	* Use subprocess module from python 2.6 to fix race condition,
	  closes: #4249.

Version 0.4.5 Released on 2010/07/07

	* Add support for extra_params parameters, refs: #2056.
	* Add support for input_extra_params parameters, closes: #2056.

Version 0.4.4 Released on 2010/05/25

	* Fix RuntimeError due to changing dictionary while iterating over it,
	  closes: #3157.
	* Add preliminary support for input parameters, refs: #3168.
	* Don't open a pipe to ffmpeg's stdin to terminate it, use kill()
	  directly, refs: #3186.

Version 0.4.3 Released on 2010/04/26

	* Add en/disabling sl2d through /etc/default/sl2d, closes: #2997.
	* Check for txt2tags in configure.
	* Catch more KeyError cases, refs: #3027.
	* ffmpeg_pipe_ezstream: add a default network timeout to ffmpeg.
	* ffmpeg_pipe_ezstream, ffmpeg_pipe_push: wait children before
	  exiting.

Version 0.4.2 Released on 2010/03/08

	* Catch KeyError exception in child_shutdown, closes: #2999.

Version 0.4.1 Released on 2010/03/02

	* Make "network_timeout" option actually work, closes: #2989.
	* Add try/except around attempts to write to subprocess stdout,
	  closes: #2994.
	* Catch exception when printing status in verbose mode and a process has
	  vanished from one of the lists, closes: #2993.

Version 0.4.0 Released on 2010/02/22

	* Move command parsing into its own method to improve readability.
	* Add support for url parameters in sl2d.conf, refs: #2245.
	* Replace custom flatten by equivalent function from sjutils.
	* Add support for setting environment variables for main command.
	* Support network timeout variable, closes: #2791.
	* Fix a syntax error triggered in exception handling of post-commands.
	* Fix unreachable call to shutdown.